spacing fixed

--- a/app/assets/stylesheets/pages/_item-index.scss
+++ b/app/assets/stylesheets/pages/_item-index.scss
@@ -22,6 +22,11 @@ a {
     height: 600px;
   }
 }
+
+.item-header {
+  margin: 16px 0;
+}
+
 #sort {
   padding: 6px;
 }
